--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Prueba git</title>
+    <title>Prueba git 3</title>
 </head>
 <body>
     <h1> Probando git 3</h1>
